[project]
name = "mpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==0.12.0",
    "argon2-cffi==20.1.0",
    "asn1crypto==0.24.0",
    "async-generator==1.10",
    "attrs==21.2.0",
    "backcall==0.2.0",
    "bleach==3.3.0",
    "braceexpand==0.1.7",
    "cachetools==4.2.2",
    "certifi==2021.5.30",
    "cffi==1.14.5",
    "chardet==4.0.0",
    "cryptography==2.1.4",
    "cycler==0.10.0",
    "dataclasses==0.8",
    "decorator==4.4.2",
    "defusedxml==0.7.1",
    "einops>=0.6.0",
    "entrypoints==0.3",
    "google-auth==1.30.1",
    "google-auth-oauthlib==0.4.4",
    "grpcio==1.38.0",
    "idna==2.6",
    "imageio==2.9.0",
    "importlib-metadata==4.4.0",
    "ipykernel==5.5.5",
    "ipython==7.16.1",
    "ipython-genutils==0.2.0",
    # "ipywidgets==7.6.3",
    "jedi==0.18.0",
    "jinja2==3.0.1",
    "jsonschema==3.2.0",
    # "jupyter==1.0.0",
    # "jupyter-client==6.2.0",
    # "jupyter-console==6.4.0",
    # "jupyter-core==4.7.1",
    # "jupyterlab-pygments==0.1.2",
    # "jupyterlab-widgets==1.0.0",
    "keyring==10.6.0",
    "keyrings-alt==3.0",
    "kiwisolver==1.3.1",
    "markdown==3.3.4",
    # "markupsafe==2.0.1",
    "markupsafe>=2.1.1",
    "mistune==0.8.4",
    "nbclient==0.5.3",
    "nbconvert==6.0.7",
    # "nbformat==5.1.3",
    "nbformat>=5.7.0",
    "nest-asyncio==1.5.1",
    "networkx>=2.8.0",
    # "notebook==6.4.0",
    # "numpy==1.19.5",
    "numpy==1.23.5",
    "oauthlib==3.1.0",
    "packaging==20.9",
    "pandocfilters==1.4.3",
    "parso==0.8.2",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    # "pillow==8.1.2",
    "pillow>=9.0.1",
    "prometheus-client==0.10.1",
    "prompt-toolkit==3.0.18",
    "protobuf==3.17.1",
    "ptyprocess==0.7.0",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pycparser==2.20",
    # "pycrypto==2.6.1",
    # "pycrypto",
    "pygments==2.9.0",
    # "pygobject==3.42.0",
    # "pygobject",
    "pyparsing==2.4.7",
    "pyrsistent==0.17.3",
    "python-dateutil==2.8.1",
    # "pywavelets==1.1.1",
    "pywavelets>=1.3.0",
    "pyxdg==0.25",
    "pyzmq==22.1.0",
    "qtconsole==5.1.0",
    "qtpy==1.9.0",
    "requests>=2.25.1",
    "requests-oauthlib==1.3.0",
    "rsa==4.7.2",
    # "scikit-image==0.17.2",
    "scikit-image>=0.20.0",
    # "scipy==1.5.4",
    "scipy>=1.7.3",
    "secretstorage==2.3.1",
    "send2trash==1.5.0",
    "six==1.11.0",
    "tensorboard==2.5.0",
    "tensorboard-data-server==0.6.1",
    "tensorboard-plugin-wit==1.8.0",
    # "terminado==0.10.0",
    "testpath==0.5.0",
    "tifffile==2020.9.3",
    "toolz==0.11.1",
    "tornado==6.1",
    "tqdm>=4.61.0",
    # "traitlets==4.3.3",
    "traitlets>=5.1",
    # "typing-extensions==3.7.4.3",
    "typing-extensions>=4.8.0",
    "urllib3==1.26.5",
    "wcwidth==0.2.5",
    "webdataset==0.1.62",
    "webencodings==0.5.1",
    # "werkzeug==2.0.1",
    "werkzeug>=2.2.3",
    # "widgetsnbextension==3.5.1",
    "zipp==3.4.1",
    "torch>2.0.1,<2.2.1",
    "torchaudio",
    "torchvision",
    # "ompl-thin==0.0.18",
    "cupy-cuda12x>=12.0.0",
    "open3d>=0.18.0",
    "opencv-python>=4.8.1.78",
    "noise>=1.2.2",
    # "jupyter-server>=1.0.11",
    "plotly>=6.2.0",
    "kaleido>=1.0.0",
    "pandas>=1.5.3",
    "accelerate>=1.0.1",
    "datasets==4.0.0",
    "lion-pytorch>=0.2.3",
    "matplotlib>=3.10.5",
    "setuptools>=75.3.2",
    "zetascale==2.8.6",
    "timm>=1.0.19",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
